--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/SahilSuman1011/Expresso/issues"
   },
-  "homepage": "https://github.com/SahilSuman1011/Expresso#readme"
+  "homepage": "https://github.com/SahilSuman1011/Expresso#readme",
+  "devDependencies": {
+    "@types/node": "^25.0.3",
+    "nodemon": "^3.1.11",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
+  }
 }
