--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/SahilSuman1011/Expresso#readme",
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "eslint": "^9.39.2",
     "globals": "^17.0.0",
@@ -27,5 +28,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.52.0"
+  },
+  "dependencies": {
+    "express": "^5.2.1"
   }
 }
